--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Decider Game</string>
+    <string name="score_hint">Score</string>
+    <string name="start_game">Start game</string>
 </resources>
