--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Decider Game</string>
     <string name="score_hint">Score</string>
     <string name="start_game">Start game</string>
+    <string name="stop_game">Stop game</string>
 </resources>
