--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="score_hint">Score</string>
     <string name="start_game">Start game</string>
     <string name="stop_game">Stop game</string>
+    <string name="game_over">GAME OVER</string>
+    <string name="seconds">seconds</string>
+    <string name="moves">moves</string>
+    <string name="score_peak">score peak</string>
+    <string name="close">Close</string>
 </resources>
